Changed modal-body to be absolutely positioned on mobile to hopefully help with scrolling issues.

--- a/public/stylesheets/less/aoi-responsive.less
+++ b/public/stylesheets/less/aoi-responsive.less
@@ -155,6 +155,10 @@ body.container-fluid{
     }
     .modal-body{  // Allow the body to fill the container space now we are "full screen"
       bottom: 10px;
+      top:60px;
+      position: absolute;
+      max-height: 100%;
+      height: auto;
     }
     
     .close{  // Make the close button a bigger target on small screens
